--- a/_quarto.yml
+++ b/_quarto.yml
@@ -72,6 +72,8 @@ website:
         text: ✅ Uniq
       - href: conteudos/arte-do-texto/14-sed.md
         text: ✅ Sed
+      - href: conteudos/arte-do-texto/15-awk.md
+        text: ✅ Awk
       section: 📂 Arte Do Texto
     - contents:
       - href: conteudos/manipulacao-de-usuario/1- Usuario e grupo.md
@@ -180,6 +182,8 @@ website:
         text: ✅ Networkmanager
       - href: conteudos/configurar-rede/5-arp.md
         text: ✅ Arp
+      - href: conteudos/configurar-rede/SSH.md
+        text: ✅ Ssh
       section: 📂 Configurar Rede
     search: true
     style: docked
